<resources>
    <string name="amplitude_api_key">1ba981d1a9afb8af8c81847ef3383a20</string>
    <string name="amplitude_api_key_debug">b9791dd64a1e9f07a330a4ac9feb1f10</string>
    <string name="example_1">
        To layout text on Android, the system does a lot of work. Each glyph is resolved — dependent on font, locale, size, font features (like bold or italic). Then the system will resolve rules for how they line up, combine, or merge as they form words. After all that, the words can finally be wrapped into available space.
    </string>
    <string name="example_2">
        For these reasons, it makes sense that laying out text can be expensive. Android uses a per-word cache to avoid recomputing much of this data, but that can only help so much — new words showing on screen, or even just new fonts and text sizes limit this as an optimization.
    </string>
    <string name="example_3">
        RecyclerView is especially sensitive to layout performance. As new items come on screen, they must layout as part of the first frame showing them. So if a complex paragraph of text in a RecyclerView item take 12ms to measure, that’s almost guaranteed to lead to jank, and dropped frames.
    </string>
    <string name="example_4">
        In this article, we’ll talk about how to use the new PrecomputedText APIs to compute text layout early, before the UI thread needs it. We’ll also go over the new text prefetch APIs in Jetpack specifically designed for displaying large amounts of text in RecyclerView, and how they can reduce UI thread text measurement cost by 95%!
    </string>
    <string name="example_5">
        The below images show a simple RecyclerView that presents large blocks of text. On a Pixel2 (Running Android P, CPU at 1GHz), measuring 80 words (~520 characters) takes TextView 15.6ms. That’s a huge amount of time! Each frame’s deadline is 16.67ms, so if the UI thread has to measure even one TextView of that complexity, it’ll blow past the deadline.

You may not have that much text in your TextViews, but if you’re running on a low-end phone, displaying something more complex than Roman characters, or use varied fonts and styles, times like these can be quite realistic.

Using Developer Options > Monitoring > Profile GPU rendering, we can see this problem visually. The green horizontal bar shows the 16.67ms ideal, and frames stack up vertically depending on how much time they take. Using a regular TextView on the left, there’s a lot of missed frames — big spikes in the graph when new items come on-screen.
    </string>
    <string name="example_6">
        The capture on the right shows the same app, but using PrecomputedText to avoid expensive measure work on the UI thread. The remaining measurement work is still there, causing small spikes, but no longer causes jank. TextView.onMeasure is reduced to 0.9ms — that’s more than 16 times faster!
    </string>
    <string name="example_7">
        PrecomputedText, announced at I/O this year, is a new API in Android P, with a compat version in Jetpack that reduces UI thread costs of text. It lets you pre-compute the vast majority of measure/layout work on a background thread.

From the UI thread, determine layout parameters from a TextView:

val params : PrecomputedTextCompat.Params =
        TextViewCompat.getTextMetricsParams(myTextView)
Do the computation of an expensive paragraph of text on a background thread:
    </string>
    <string name="example_8">
        Тестирую текст
    </string>
    <string name="editor_toolbar">button</string>
    <string name="confirm">Confirm</string>
    <string name="code_empty">Invitation code should not be null</string>
    <string name="enter_invitation_hint">Invitation code</string>
    <string name="enter_invitation_text">If you don\'t have one just go to anytype.io and sign up to the waiting list. We are inviting people on the rolling bases.</string>
    <string name="start_login_text">With Anytype you can write notes and documents, manage tasks, share files and save important content from the web.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="type_your_recovery_phrase">or type your recovery phrase</string>
    <string name="login_with_recovery_phrase">Login with recovery phrase</string>
    <string name="or_scan_qr_code">Scan QR code</string>
    <string name="choose_pin_code">Choose pin code</string>
    <string name="congratulations">Congratulations!</string>
    <string name="time_to_update_title">It\'s time to update</string>
    <string name="time_to_update_text">Some of your data was managed in a newer version of Anytype.\nPlease update the app to work with all your docs and the latest features.</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="let_us_start">Let\'s start!</string>
    <string name="you_ve_created_your_first_profile">You\'ve created your first profile!</string>
    <string name="it_s_stored_on_your_device_and_nobody_will_know_about_it_until_you_share_it">It\'s stored on your device and nobody will know about it until you share it!</string>
    <string name="choose_profile">Choose profile</string>
    <string name="logout">Logout</string>
    <string name="add_profile">Add profile</string>
    <string name="add_name_and_profile_picture">Add your name \nand profile picture</string>
    <string name="type_your_name">Enter your name</string>
    <string name="create_profile">Create</string>
    <string name="t">T</string>
    <string name="do_it_later">Do it later</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="confirm_pin_code">Confirm pin code</string>
    <string name="switch_profile">Switch profile</string>
    <string name="description_profile_picture">Profile picture</string>
    <string name="description_arrow_icon">Arrow icon</string>
    <string name="recovery_phrase">Recovery phrase</string>
    <string name="pin_code">Pin code</string>
    <string name="user_settings">User settings</string>
    <string name="other_settings">Other settings</string>
    <string name="your_page">Your public page</string>
    <string name="updates">Updates</string>
    <string name="log_out">Log out</string>
    <string name="recovery_phrase_text">You’ll need it to sign in. Keep it in a safe place. If you lose it, you can no longer access your account.</string>
    <string name="back_up_your_recovery_phrase">Back up your recovery phrase</string>
    <string name="i_ve_written_it_down">i\'ve written it down</string>
    <string name="keychain_mock">witch collapse practice feed shame open despair creek road again ice least lake tree young address brain envelope</string>
    <string name="show_and_copy_mnemonic">Show and copy phrase</string>
    <string name="greet">Hi, %1$s</string>
    <string name="greet_user">Hi, User</string>
    <string name="enter_your_code">Enter your invitation code</string>
    <string name="organize_everything">Welcome to Anytype</string>
    <string name="setting_up_the_wallet">Setting up the wallet…</string>
    <string name="sign_clock">⏳</string>
    <string name="back">Back</string>
    <string name="create_a_new_profile">Create a new profile</string>
    <string name="no_peers">No peers</string>
    <string name="content_description_back_button_icon">Back button icon</string>
    <string name="hint_link">Paste or type a URL</string>
    <string name="button_unlink">Unlink</string>
    <string name="button_link">Link</string>
    <string name="permission_read_rationale">Read permission is needed to load file to media block.</string>
    <string name="permission_read_denied">User denied permission. Please, approve this permission in \"Permissions\" in the app settings on your device.</string>
    <string name="permission_read_never_ask_again">Read permission was denied with never ask again.\n You must approve this permission in \"Permissions\" in the app settings on your device.</string>
    <string name="permission_write_rationale">Write permission is needed to load file to device.</string>
    <string name="permission_write_denied">Write permission was denied. Please consider granting it in order to load files to device!</string>
    <string name="permission_write_never_ask_again">Write permission was denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="button_ok">Ok</string>
    <string name="error">Error</string>
    <string name="page_icon">Page icon</string>
    <string name="page_icon_picker_remove_text">Remove</string>
    <string name="create_bookmark">Create</string>
    <string name="hint_paste_or_type_a_url">Paste or type a URL</string>
    <string name="content_description_menu_icon">Menu icon</string>
    <string name="add_new">Add new</string>
    <string name="failed_to_launch_wallet">Failed to launch wallet after retry.</string>
    <string name="pickit_drive">Drive file was selected</string>
    <string name="pickit_file_selected">File was selected from unknown provider</string>
    <string name="pickit_local_file">Local file was selected</string>
    <string name="pickit_waiting">Waiting to receive file…</string>
    <string name="profile_wallpaper">Wallpaper</string>
    <string name="content_desc_wallpaper">Wallpaper icon</string>
    <string name="content_desc_key">Keychain icon</string>
    <string name="content_desc_pin">Pin icon</string>
    <string name="nav_open_page">Open as page</string>
    <string name="btn_nav_open">Open</string>
    <string name="search_no_results">There is no object named \"%1$s\"</string>
    <string name="search_no_results_try">Try to create a new one or search for something else</string>
    <string name="search_empty_pages">You have no pages to search for.</string>
    <string name="link_to_this_page">Link to this page</string>
    <string name="link">Link</string>
    <string name="move_into_this_page">Move into this page</string>
    <string name="move_into">Move into</string>
    <string name="telegram_app">https://t.me/joinchat/BsRYeRURhKcXDOyDA7_NLw</string>
    <string name="telegram_web">http://www.telegram.me/joinchat/BsRYeRURhKcXDOyDA7_NLw</string>
    <string name="fetching_your_account">Fetching your account…</string>
    <string name="delete">Delete</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="optimal_dimensions_in_width_1080_pixels">Optimal dimensions in width 1080 pixels</string>
    <string name="cover_size">Cover size</string>
    <string name="change_cover">Change cover</string>
    <string name="remove">Remove</string>
    <string name="btn_upload">Upload</string>
    <string name="layout">Layout</string>
    <string name="icon">Icon</string>
    <string name="icon_description">Emoji or image for object</string>
    <string name="cover">Cover</string>
    <string name="cover_description">Background picture</string>
    <string name="layout_description">Arrangement of objects on a canvas</string>
    <string name="relations">Relations</string>
    <string name="relations_description">List of related objects</string>
    <string name="history_description">All version of object</string>
    <string name="history">History</string>
    <string name="object_debug">Object Debug</string>
    <string name="object_diagnostics">Diagnostics</string>
    <string name="close">Close</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="clear_cache_title">Are you sure?</string>
    <string name="download_from_node">All media files stored in Anytype will be deleted from your current device. They can be downloaded again from a backup node or another device.</string>
    <string name="unsplash">Unsplash</string>
    <string name="do_not_forget_to_save_recovery_phrase_msg">Don’t forget to take and save your recovery phrase from settings</string>
</resources>