<?xml version="1.0" encoding="utf-8"?>
<!--typography, buttons 05.04-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.anytypeio.anytype.ui.dashboard.MnemonicReminderDialog">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextView.ContentStyle.Headline.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:text="@string/do_not_forget_to_save_recovery_phrase_msg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.anytypeio.anytype.core_ui.views.ButtonSecondaryLarge
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/close" />

        <com.anytypeio.anytype.core_ui.views.ButtonWarningLarge
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/go_to_settings" />

    </LinearLayout>

</LinearLayout>