<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.anytypeio.anytype.ui.dashboard.ClearCacheAlertFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextView.ContentStyle.Headline.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/clear_cache_title" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextView.UXStyle.Body.Callout.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/download_from_node" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.anytypeio.anytype.core_ui.views.ButtonSecondaryLarge
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <com.anytypeio.anytype.core_ui.views.ButtonWarningLarge
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>