<?xml version="1.0" encoding="utf-8"?>
<!--typography, buttons 05.04-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.editor.cover.SelectCoverGalleryFragment">

    <View
        android:id="@+id/dragger"
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/page_icon_picker_dragger_background" />

    <FrameLayout
        android:id="@+id/headerToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:layout_marginTop="@dimen/dp_6">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextView.UXStyle.Titles.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_cover" />

        <TextView
            android:id="@+id/btnRemove"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp_16"
            android:text="@string/remove"
            android:textColor="@color/palette_system_red" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/docCoverGalleryRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:minHeight="300dp"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_16" />

    <LinearLayout
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnUnsplash"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unsplash"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="@color/glyph_active" />

        <TextView
            android:id="@+id/btnUpload"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/btn_upload"
            android:textColor="@color/glyph_active" />

    </LinearLayout>

</LinearLayout>